hphp/hack/test/typecheck/expression_trees/subtype.php.like_types.exp
File "subtype.php", line 26, characters 13-19:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "subtype.php", line 15, characters 34-72:
  But got `dynamic` because it is an unenforceable type
